# flowlyai

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
bridge/: package.json
bridge/src/: index.ts
doxx/: INTEGRATIONS.md  INTEGRATION_FILE_MAP.md
flowly/: __init__.py  __main__.py
flowly/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
flowly/agent/tools/: __init__.py  cron.py  delegate.py  docker.py  filesystem.py  message.py  registry.py  screenshot.py  shell.py  spawn.py  system.py  trello.py  voice.py  web.py  x.py
flowly/bus/: __init__.py  queue.py
flowly/channels/: __init__.py  base.py  discord.py  manager.py  slack.py  telegram.py  whatsapp.py
flowly/cli/: __init__.py  commands.py  setup.py
flowly/compaction/: __init__.py  estimator.py  pruning.py  service.py  summarizer.py  types.py
flowly/config/: __init__.py  loader.py  schema.py
flowly/cron/: __init__.py  service.py  types.py
flowly/exec/: __init__.py  approvals.py  executor.py  safety.py  types.py
flowly/gateway/: __init__.py  server.py
flowly/heartbeat/: __init__.py
flowly/hub/: __init__.py  cli.py  client.py  manager.py
flowly/multiagent/: __init__.py  invoke.py  orchestrator.py  router.py  setup.py
flowly/pairing/: __init__.py  store.py
flowly/providers/: __init__.py  litellm_provider.py
flowly/session/: __init__.py  manager.py
flowly/skills/: README.md
flowly/skills/compact/: SKILL.md
flowly/skills/github/: SKILL.md
flowly/skills/summarize/: SKILL.md
flowly/skills/tmux/: SKILL.md
flowly/skills/weather/: SKILL.md
flowly/utils/: __init__.py  helpers.py
flowly/voice/: __init__.py  audio.py  call_manager.py  plugin.py  stt.py  tts.py  types.py  webhook.py
tests/: test_config_loader.py  test_cron.py  test_schema.py  test_tool_registry.py
voice-bridge/: .env"A  .env.example  README.md  package-lock.json  package.json
voice-bridge/src/: audio.ts  call-manager.ts  config.ts  index.ts  server.ts  types.ts
voice-bridge/src/stt/: deepgram.ts  elevenlabs.ts  groq.ts  index.ts  openai.ts
voice-bridge/src/tts/: deepgram.ts  elevenlabs.ts  index.ts  openai.ts
voice-bridge/src/twilio/: index.ts  media-stream.ts  provider.ts  (+1 more)
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: MEMORY.md
workspace/personas/: butler.md  casual.md  default.md  friday.md  jarvis.md  pirate.md  professor.md  samurai.md
(+1 files in other folders)
