[project]
name = "flowly-ai"
version = "1.0.0"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
authors = [
    {name = "flowly contributors"}
]
keywords = ["ai", "agent", "chatbot", "assistant", "telegram", "discord", "slack", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "python-telegram-bot>=21.0",
    "tiktoken>=0.5.0",
    "filelock>=3.0.0",
    "aiohttp>=3.9.0",
    "starlette>=0.32.0",
    "uvicorn>=0.24.0",
    "audioop-lts>=0.2.0; python_version>='3.13'",
    "python-multipart>=0.0.6",
    "InquirerPy>=0.3.4",
    "pyngrok>=7.0.0",
    "slack-sdk>=3.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
flowly = "flowly.cli.commands:app"
flowly-hub = "flowly.hub.cli:main"

[project.urls]
Homepage = "https://github.com/hakansoren/flowlyai"
Repository = "https://github.com/hakansoren/flowlyai"
Issues = "https://github.com/hakansoren/flowlyai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowly"]

[tool.hatch.build.targets.wheel.sources]
"flowly" = "flowly"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "flowly/**/*.py",
    "flowly/skills/**/*.md",
    "flowly/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "flowly/",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "flowly/bridge"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
